# Geometric-Search-Engine

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  README.md
Geometric/: CMakeLists.txt
Geometric/include/: BruteForce.h  Kd_Tree.h  RTree.h  distance.h  geometric.h  types.h
Geometric/source/: BruteForce.cpp  Kd_Tree.cpp  RTree.cpp  distance.cpp  geometric.cpp
python/: CMakeLists.txt  Geometric.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_geometry_search  test_geometry_search.cpp
tests/python/: CMakeLists.txt  Generator.py  Tester.py  test_correctness.py  test_performance.py  test_pybind_module.py  tester.py
tests/source/: test.cpp
